54) PPP prevent drop session at high cpu load. If cpu load > max allowed ppp must drop packets.<br>
55) Fix MINIUPNP rules position in iptables script(change to PFW->UPNP->DMZ from PFW->DMZ->UPNP).<br>
56) Update miniupnp and libnatpmp to 1.5.20110715 version.<br>
57) Fix script generate for webstr.<br>
58) Fix mbssid up logic.<br>
59) Fix fuse_daemonize with uClibc.<br>
60) xt_webstr now work with nat offload enabled (Content Filter work OK).<br>
61) Add hardware led indication update firmware process(Use WPS and SEC LEDs).<br>
62) Fix modutils code need used /etc for modules.* files(aliases and other).<br>
63) Update radvd to stable tree.<br>
64) Cleanup buildtree and more correct build.<br>
65) Fix pptp plugin segfault on some time and some ISP.<br>
66) Expand ppp watchdog.<br>
67) Move lcp options to nvram. Default vpnLCPInterval=30 vpnLCPFailure=5.<br>
68) Add vpnCpuLimit to nvram. This is prevent full cpu load by ppp_generic module(default/optimal 3600, 0-disable, 1000-minimal used).<br>
69) Fix kernel extencion at QoS enabled script.<br>
70) Fix work pmtu discovery at hw_nat enabled.<br>
71) xt_MARK now work with sw_nat enabled(disable offload only for marked packets).<br>
72) Fix regression in conntrack code(kernel crash at filter connections in complex mode offload NAT).<br>
73) Disable modules autoload from iptables. Need direct modprobe in init scripts.<br>
74) Replace various uses of num_physpages by totalram_pages. Sizing of memory allocations shouldn't depend 
    on the number of physical pages found in a system.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>