@@ -517,6 +517,7 @@
 73) Disable modules autoload from iptables. Need direct modprobe in init scripts.<br>
 74) Replace various uses of num_physpages by totalram_pages. Sizing of memory allocations shouldn't depend 
     on the number of physical pages found in a system.<br>
+75) Fix upnp work in vpn mode at old kernel+new gcc. This is compiler bug.<br>
 
 <br><br>
 <b>For support see:</b><br>
